infra/k8s/nats-depl.yaml
apiVersion: apps/v1 #this is like a bucket of kubernetes , deployment is is apps/v1 and pods is in v1
kind: Deployment
metadata:
  name: nats-depl # name of deployment
spec:
  replicas: 1 #number of pods to run
  selector: # which pod to run , so matchLabel -> find everything with label "auth"(just a key value pair...app is not important ..you can name anything)
    matchLabels:
      app: nats
  template: # pod config file
    metadata:
      labels:
        app: nats # the tabel which we apply above
    spec:
      containers:
        - name: nats
          image: nats-streaming:0.25.4
          imagePullPolicy: Always
          args: [
            '-p',
            '4222',
            '-m',
            '8222',
            '-hbi',
            '5s',
            '-hbt',
            '5s',
             '-hbf',
             '2',
             '-SD',
             '-cid',
             'ticketing'
          ]
---

apiVersion: v1
kind: Service
metadata:
  name: nats-srv
spec:
  selector:
    app: nats
  ports:
    - name: client
      protocol: TCP
      port: 4222
      targetPort: 4222
    - name: monitoring
      protocol: TCP
      port: 8222
      targetPort: 8222
