infra/k8s/tickets-depl.yaml
apiVersion: apps/v1 #this is like a bucket of kubernetes , deployment is is apps/v1 and pods is in v1
kind: Deployment
metadata:
  name: tickets-depl # name of deployment
spec:
  replicas: 1 #number of pods to run
  selector: # which pod to run , so matchLabel -> find everything with label "auth"(just a key value pair...app is not important ..you can name anything)
    matchLabels:
      app: tickets
  template: # pod config file
    metadata:
      labels:
        app: tickets # the tabel which we apply above
    spec:
      containers:
        - name: tickets
          image: us.gcr.io/ticketing-dev-380007/tickets
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-srv
spec:
  selector:
    app: tickets
  ports:
    - name: tickets
      protocol: TCP
      port: 3000
      targetPort: 3000
